使用Bootstrap2更新帐号(account)相关的模板文件

--- a/wtxlog/account/templates/change_password.html
+++ b/wtxlog/account/templates/change_password.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
+{% set active_page = 'change-password' %}
+
+{% block title %}{{ _('Change Password') }}{% endblock %}
+
 {% block body %}
         <form method="POST" action="">
+            <legend>{{ _('Change Password') }}</legend>
             {{ form.hidden_tag() if form.hidden_tag }}
             {% for f in form if f.type != 'CSRFTokenField' %}
             <div>
