--- a/wtxlog/account/templates/reset_password.html
+++ b/wtxlog/account/templates/reset_password.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}{{ _('Reset Password') }}{% endblock %}
+
 {% block body %}
         <form method="POST" action="">
+            <legend>{{ _('Reset Password') }}</legend>
             {{ form.hidden_tag() if form.hidden_tag }}
             {% for f in form if f.type != 'CSRFTokenField' %}
             <div>
