--- a/wtxlog/account/templates/change_email.html
+++ b/wtxlog/account/templates/change_email.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
+{% set active_page = 'change-email' %}
+
+{% block title %}{{ _('Change Email') }}{% endblock %}
+
 {% block body %}
         <form method="POST" action="">
+            <legend>{{ _('Change Email') }}</legend>
             {{ form.hidden_tag() if form.hidden_tag }}
             {% for f in form if f.type != 'CSRFTokenField' %}
             <div>
