--- a/wtxlog/account/templates/register.html
+++ b/wtxlog/account/templates/register.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}{{ _('Register') }}{% endblock %}
+
 {% block body %}
         <form method="POST" action="">
+            <legend>{{ _('Register') }}</legend>
             {{ form.hidden_tag() if form.hidden_tag }}
             {% for f in form if f.type != 'CSRFTokenField' %}
             <div>
@@ -18,5 +21,5 @@
             {% endfor %}
         </form>
 
-        <a href="{{ url_for('account.login') }}">Login</a> 
+        <p><a href="{{ url_for('account.login') }}">{{ _('Already have an account, Login Please.') }}</a></p>
 {% endblock %}
