修正Bootstrap2文件引用错误

--- a/wtxlog/account/templates/base.html
+++ b/wtxlog/account/templates/base.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8" />
 <title>{% block title %}{% endblock %}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="{{ url_for('admin.static', filename='bootstrap/bootstrap/css/bootstrap.css') }}" rel="stylesheet">
-<link href="{{ url_for('admin.static', filename='bootstrap/bootstrap/css/bootstrap-responsive.css') }}" rel="stylesheet">
+<link href="{{ url_for('admin.static', filename='bootstrap/css/bootstrap.css') }}" rel="stylesheet">
+<link href="{{ url_for('admin.static', filename='bootstrap/css/bootstrap-responsive.css') }}" rel="stylesheet">
 </head>
 {# 定义导航菜单 #}
 {% set navigation_bar = [
