更改X-UA-Compatible值

--- a/wtxlog/themes/imtx/templates/layout.html
+++ b/wtxlog/themes/imtx/templates/layout.html
@@ -3,7 +3,7 @@
   <head>
     <title>{% block fulltitle%}{% block title %}{% endblock %} - {{ config['SITE_NAME'] }}{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="keywords" content="{% block keywords %}{% endblock %}" />
     <meta name="description" content="{% block description %}{% endblock %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" />
