--- a/wtxlog/account/templates/base.html
+++ b/wtxlog/account/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>{% block title %}{% endblock %}</title>
+<title>{% block title %}{% endblock %} - {{ config['SITE_NAME'] }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="{{ url_for('admin.static', filename='bootstrap/css/bootstrap.css') }}" rel="stylesheet">
 <link href="{{ url_for('admin.static', filename='bootstrap/css/bootstrap-responsive.css') }}" rel="stylesheet">
@@ -23,7 +23,7 @@
   <div class="container">
   <div class="navbar">
   <div class="navbar-inner">
-    <span class="brand">{{ config['SITE_NAME'] }}</span>
+    <span class="brand"><a href="{{ url_for('main.index') }}">{{ config['SITE_NAME'] }}</a></span>
     <ul class="nav">
       {% for href, id, caption, p in navigation_bar %}
       {% if permission >= p %}<li class="{% if id == active_page %} active{% endif %}"><a href="{{ href|e }}">{{ caption|e }}</a></li>{% endif %}
@@ -33,9 +33,7 @@
 </div>
 
 {% for message in get_flashed_messages() %}
-<div class="alert">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>{{ message }}
-</div>
+<div class="alert">{{ message }}</div>
 {% endfor %}
 
 {% block body %}{% endblock %}
