--- a/wtxlog/account/templates/login.html
+++ b/wtxlog/account/templates/login.html
@@ -5,22 +5,30 @@
 {% block body %}
         <form method="POST" action="">
             <legend>{{ _('Login') }}</legend>
+            <fieldset>
             {{ form.hidden_tag() if form.hidden_tag }}
-            {% for f in form if f.type != 'CSRFTokenField' %}
-            <div class="control-group">
-            {{ f.label(class='control-label') }}
-            <div class="controls">
-			<div>{{ f }}</div>
-            {% if f.errors %}
-            <ul>
-                {% for e in f.errors %}
-                <li>{{ e }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-			</div>
+            {% for field in form if field.name in ('email', 'password') %}
+            <div class="control-group {% if field.errors %}error{% endif %}">
+            {{ field.label(class='control-label') }}
+                <div class="controls">
+                    <div>{{ field }}</div>
+                    {% if field.errors %}
+                    <ul>
+                        {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </div>
             </div>
             {% endfor %}
+            <div class="control-group">
+                <label class="checkbox">{{ form.remember_me }} {{ form.remember_me.label }}</label>
+                <div class="controls">
+                    <button type="submit" class="btn btn-primary btn-large">{{ _('Login') }}</button>
+                </div>
+            </div>
+            </fieldset>
         </form>
         <p><a href="{{ url_for('account.password_reset_request') }}">{{ _('Forgot your password?') }}</a></p>
         <p><a href="{{ url_for('account.register') }}">{{ _('Need an account? Register free.') }}</a></p>
