--- a/wtxlog/account/templates/register.html
+++ b/wtxlog/account/templates/register.html
@@ -5,20 +5,29 @@
 {% block body %}
         <form method="POST" action="">
             <legend>{{ _('Register') }}</legend>
+            <fieldset>
             {{ form.hidden_tag() if form.hidden_tag }}
-            {% for f in form if f.type != 'CSRFTokenField' %}
-            <div>
-            {{ f.label }}
-            {{ f }}
-            {% if f.errors %}
-            <ul>
-                {% for e in f.errors %}
-                <li>{{ e }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
+            {% for field in form if field.type not in ('CSRFTokenField', 'SubmitField') %}
+            <div class="control-group {% if field.errors %}error{% endif %}">
+            {{ field.label(class='control-label') }}
+                <div class="controls">
+                    <div>{{ field }}</div>
+                    {% if field.errors %}
+                    <ul>
+                        {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </div>
             </div>
             {% endfor %}
+            <div class="control-group">
+                <div class="controls">
+                    <button type="submit" class="btn btn-primary btn-large">{{ _('Register') }}</button>
+                </div>
+            </div>
+            </fieldset>
         </form>
 
         <p><a href="{{ url_for('account.login') }}">{{ _('Already have an account, Login Please.') }}</a></p>
